[RESTEASY-2937] Resolve deprecation warnings for class constructor newInstance()